style: fix header alignment

--- a/src/blocks/WeatherForecast/WeatherForecast.module.css
+++ b/src/blocks/WeatherForecast/WeatherForecast.module.css
@@ -54,7 +54,7 @@
 @media (max-width: 430px) {
   .WeatherForecast {
     .nav {
-      img {
+      .logo {
         transform: scale(0.8);
         transform-origin: left;
       }
