--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -6,6 +6,7 @@
   cursor: pointer;
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: 8px 10px;
 
   &.option,
